--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,12 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+allow_paths = ["./img", "./broadcast"]
+remappings = ["@openzeppelin=lib/openzeppelin-contracts"]
+fs_permissions = [
+    { access = "read", path = "./img" },
+    { access = "read", path = "./broadcast" },
+]
+
+ffi = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
